[package]
name = "servo-fontconfig-sys"
version = "4.0.7"
authors = ["Keith Packard <keithp@keithp.com>", "Patrick Lam <plam@mit.edu>"]
license = "MIT"
description = "Font configuration and customization library"
homepage = "http://fontconfig.org"
repository = "https://github.com/servo/libfontconfig/"
links = "fontconfig"
build = "build.rs"

[lib]
name = "fontconfig_sys"
path = "lib.rs"

[dependencies]
expat-sys = {git="https://github.com/cmr/libexpat", branch="web"}
servo-freetype-sys = {git="https://github.com/cmr/libfreetype2", branch="web"}

[build-dependencies]
pkg-config = "0.3"
